# serenity

./: .gitignore  CMakeLists.txt  CMakeSettings.json
AK/: Assertions.h  BumpAllocator.h  Demangle.h  Error.cpp  Error.h  FloatingPoint.h  IntrusiveList.h  Platform.h  Singleton.h  Time.cpp  Time.h  Types.h
Applications/Browser/: InspectorWidget.h
Applications/Piano/: RollWidget.h
Kernel/: Process.cpp  Thread.cpp  Thread.h
Ladybird/cmake/: EnableLLD.cmake
Libraries/LibJS/Runtime/: ArrayIterator.cpp
Meta/: serenity.py
Meta/CMake/: lagom_compile_options.cmake
Meta/Lagom/: CMakeLists.txt
Meta/Lagom/Tools/: CMakeLists.txt
Meta/Lagom/Tools/CodeGenerators/LibLocale/: GenerateDateTimeFormatData.cpp  GenerateLocaleData.cpp
Meta/Lagom/Tools/CodeGenerators/LibTimeZone/: GenerateTimeZoneData.cpp
Meta/Lagom/Tools/CodeGenerators/LibWeb/BindingsGenerator/: CMakeLists.txt
Tests/LibJS/: test262-runner.cpp
Userland/: sleep.cpp
Userland/Libraries/LibCore/: AnonymousBuffer.h  AnonymousBufferWindows.cpp  CMakeLists.txt  Command.h  ConfigFile.cpp  DateTime.cpp  DeprecatedFileWindows.cpp  DirIterator.cpp  DirIterator.h  Directory.cpp  Directory.h  DirectoryEntry.cpp  DirectoryEntry.h  EventLoop.cpp  EventLoop.h  File.cpp  IODevice.cpp  IODevice.h  LocalServer.cpp  LockFile.cpp  MappedFile.cpp  MappedFile.h  Process.cpp  SOCKSProxyClient.cpp  SessionManagement.h  SharedCircularQueue.h  Socket.cpp  Socket.h  SocketAddress.h  StandardPaths.cpp  Stream.h  System.h  SystemServerTakeover.cpp  SystemWindows.cpp  TCPServer.cpp  Version.cpp
Userland/Libraries/LibCore/Windows/: AnonymousBuffer.cpp  DeprecatedFile.cpp  Socket.cpp  System.cpp
Userland/Libraries/LibCore/win32/: PosixEmulation.cpp  PosixEmulation.h  StandardPaths.cpp
Userland/Libraries/LibCrypto/ASN1/: ASN1.cpp
Userland/Libraries/LibFileSystem/: CMakeLists.txt  FileSystemWindows.cpp  TempFile.cpp
Userland/Libraries/LibGemini/: Job.cpp
Userland/Libraries/LibGfx/: Bitmap.cpp
Userland/Libraries/LibGfx/Font/OpenType/: Font.cpp
Userland/Libraries/LibHTTP/: HttpRequest.cpp  HttpRequest.h  Job.cpp
Userland/Libraries/LibIPC/: Connection.cpp  Connection.h  Encoder.cpp  File.h  Message.h
Userland/Libraries/LibJS/: CMakeLists.txt  Forward.h
Userland/Libraries/LibJS/Bytecode/: BasicBlock.cpp  Interpreter.h  Op.h
Userland/Libraries/LibJS/Contrib/Test262/: AgentObject.cpp
Userland/Libraries/LibJS/Heap/: BlockAllocator.cpp  HeapBlock.cpp
Userland/Libraries/LibJS/Runtime/: DateConstructor.cpp  ErrorTypes.h  VM.cpp
Userland/Libraries/LibLine/: CMakeLists.txt  Editor.cpp  Editor.h  InternalFunctions.cpp
Userland/Libraries/LibLocale/: CMakeLists.txt
Userland/Libraries/LibMain/: Main.cpp
Userland/Libraries/LibSyntax/: Language.cpp
Userland/Libraries/LibTLS/: TLSv12.cpp
Userland/Libraries/LibTest/: CrashTest.cpp  JavaScriptTestRunner.h  JavaScriptTestRunnerMain.cpp  TestRunnerUtil.h  TestSuite.cpp
Userland/Libraries/LibThreading/: BackgroundAction.cpp  Mutex.h  Thread.cpp  Thread.h
Userland/Libraries/LibTimeZone/: TimeZone.cpp
